tests/misc/fallback_test/expected/033_closure_crash.php.expected
src/033_closure_crash.php:2 PhanParamTooFewCallable Call with 1 arg(s) to \intdiv() (as a provided callable) which requires 2 arg(s) defined at internal:0
src/033_closure_crash.php:2 PhanSyntaxError Cannot use empty array elements in arrays
src/033_closure_crash.php:2 PhanTypeMismatchArgumentInternal Argument 1 (numerator) is \SimpleXMLElement|\Traversable|iterable but \intdiv() takes int
src/033_closure_crash.php:2 PhanTypeMismatchArgumentInternal Argument 1 (string) is int but \strlen() takes string
